--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,11 +14,11 @@ build_script:
 
     C:\Python37-x64\python.exe unimake.py -d c:\projects\modorganizer-build -s Appveyor_Build=True %APPVEYOR_PROJECT_NAME%
 artifacts:
-- path: vsbuild\src\RelWithDebInfo\installer_quick.dll
+- path: ..\..\..\install\bin\plugins\installer_quick.dll
   name: installer_quick_dll
-- path: vsbuild\src\RelWithDebInfo\installer_quick.pdb
+- path: ..\..\..\install\pdb\installer_quick.pdb
   name: installer_quick_pdb
-- path: vsbuild\src\RelWithDebInfo\installer_quick.lib
+- path: ..\..\..\install\libs\installer_quick.lib
   name: installer_quick_lib
 on_success:
   - ps: Set-Location -Path $env:APPVEYOR_BUILD_FOLDER
