--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,11 +22,11 @@ build_script:
     
     if($LastExitCode -ne 0) { $host.SetShouldExit($LastExitCode )  }
 artifacts:
-- path: build\src\installer_quick.dll
+- path: vsbuild\src\RelWithDebInfo\installer_quick.dll
   name: installer_quick_dll
-- path: build\src\installer_quick.pdb
+- path: vsbuild\src\RelWithDebInfo\installer_quick.pdb
   name: installer_quick_pdb
-- path: build\src\installer_quick.lib
+- path: vsbuild\src\RelWithDebInfo\installer_quick.lib
   name: installer_quick_lib
 on_success:
   - ps: Set-Location -Path $env:APPVEYOR_BUILD_FOLDER
